Changelog: 2000-08-13 15:20 UTC+0500 April White <awhite@user.rose.com>
   * doc/en/
     - removed hbapi.txt hbcompat.txt hbset.txt

2000-08-13 15:58 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * contrib/rdd_ads/ads1.c
   * include/hbapirdd.h
   * source/rdd/dbcmd.c
   * source/pp/pptable.c
     Scoped relations implemented in RDD ADS. Added extra parameter to
     dbSetRelation() - forth, it is .T., in case of using scoped relation.
     Changed syntax of SET RELATION command, it is now:
      SET RELATION [ADDITIVE] [SCOPED] TO ... INTO ...

2000-08-13 06:55 GMT + 1 Antonio Linares <alinares@fivetech.com>
   * source/vm/mainwin.c
     Enhanced so it now process command line arguments.
     (bug reported by Patrick Mast)

2000-08-12 20:20 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
*doc/en/compiler.txt
 doc/en/harbext.txt
 doc/en/var.txt
 doc/en/file.txt
 doc/en/hvm.txt
 doc/en/math.txt
 doc/en/subcodes.txt
    *Small formating
     Correct the case of some categories
+doc/en/cmdline.txt
    *Formated as an hbdoc source.
*doc/genhtm.rsp
 +added cmdline.txt to response file
*utils/hbdoc/genhtm.prg
 utils/hbdoc/genchm.prg
    *Fixed an small Bug
*utils/hbdoc/hbdoc.prg
 utils/hbdoc/genrtf.prg
 utils/hbdoc/rtf.prg
    *Added code to generate the Winhelp .cnt file dinanmicall,So every time
     the doc is updated , the winhelp.cnt file will also be updated.

Changelog: 2000-08-12 20:00 UTC+0500 April White <awhite@user.rose.com>
   disregard my: 2000-07-29 03:00 UTC+0500
   TODO: remove the old hb*.txt files from doc/en
   * doc/en/
     + hb_api.txt hb_apier.txt hb_apifs.txt hb_apigt.txt hb_apiit.txt
     + hb_apiln.txt hb_apird.txt hb_compa.txt hb_date.txt hb_macro.txt
     + hb_set.txt hb_vm.txt
   * doc/genhtm.rsp
     + added references to the above

2000-08-12 15:20 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/pp/ppcode.c
        * fixed '\`' into '`' to stop warning in GCC

    *source/compiler/harbour.l